--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-		</dependency>
+		</dependency> -->
+		 <dependency>
+		   	<groupId>org.postgresql</groupId>
+		   	<artifactId>postgresql</artifactId>
+		   </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
