--- a/application.yml
+++ b/application.yml
@@ -1,26 +1,26 @@
-spring:
-# Email (MailProperties)
-  mail:
-    default-encoding: UTF-8
-    protocol: smtp
-    #host: localhost
-    #port: 2525
-    host: smtp.gmail.com
-    port: 587
-    jndi-name: mail/Session
-    password: godsqoksidhjprkw # Google App password
-    username: clubhub.h@gmail.com # Google account mail address
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            #enable: false
-            enable: true
-          socketFactory:
-            #port: 2525
-            port: 587
-            class: javax.net.ssl.SSLSocketFactory
-            fallback: false
-        debug: true
-    test-connection: false
+#spring:
+## Email (MailProperties)
+#  mail:
+#    default-encoding: UTF-8
+#    protocol: smtp
+#    #host: localhost
+#    #port: 2525
+#    host: smtp.gmail.com
+#    port: 587
+#    jndi-name: mail/Session
+#    password: godsqoksidhjprkw # Google App password
+#    username: clubhub.h@gmail.com # Google account mail address
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            #enable: false
+#            enable: true
+#          socketFactory:
+#            #port: 2525
+#            port: 587
+#            class: javax.net.ssl.SSLSocketFactory
+#            fallback: false
+#        debug: true
+#    test-connection: false
