--- a/application.yml
+++ b/application.yml
@@ -1,26 +1,45 @@
+#spring:
+## Email (MailProperties)
+#  mail:
+#    default-encoding: UTF-8
+#    protocol: smtp
+#    #host: localhost
+#    #port: 2525
+#    host: smtp.gmail.com
+#    port: 587
+#    jndi-name: mail/Session
+#    password: godsqoksidhjprkw # Google App password
+#    username: clubhub.h@gmail.com # Google account mail address
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            #enable: false
+#            enable: true
+#          socketFactory:
+#            #port: 2525
+#            port: 587
+#            class: javax.net.ssl.SSLSocketFactory
+#            fallback: false
+#        debug: true
+#    test-connection: false
+#    
+
 spring:
-# Email (MailProperties)
+#  datasource:
+#    driverClassName: org.h2.Driver
+#    url: jdbc:h2:file:/tmp/mvp_mitsumori01 #
+#    username: sa
+#    password:
+  jpa:
+    hibernate.ddl-auto: validate #
+  thymeleaf.cache: false
+
   mail:
-    default-encoding: UTF-8
-    protocol: smtp
-    #host: localhost
-    #port: 2525
     host: smtp.gmail.com
     port: 587
-    jndi-name: mail/Session
-    password: godsqoksidhjprkw # Google App password
-    username: clubhub.h@gmail.com # Google account mail address
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            #enable: false
-            enable: true
-          socketFactory:
-            #port: 2525
-            port: 587
-            class: javax.net.ssl.SSLSocketFactory
-            fallback: false
-        debug: true
-    test-connection: false
+    username: clubhub.h@gmail.com
+    password: godsqoksidhjprkw
+    properties.mail.smtp.auth: true
+    properties.mail.smtp.starttls.enable: true
